Servicos/pod-apache2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache2-pod
  namespace: servicos
spec:
  containers:
    - name: container-apache
      image: httpd:latest
