Servicos/pod-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-web
  namespace: servicos
  labels:
    app: pod-web
spec:
  containers:
    - name: container-web
      image: gcr.io/google-samples/hello-app:1.0
      ports:
        - containerPort: 8080
