Servicos/service-apache-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-apache-loadbalancer
  namespace: servicos
spec:
  selector:
    app: apache
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
