Servicos/service-apache-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-apache-nodeport
  namespace: servicos
spec:
  selector:
    app: apache
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
