Servicos/service-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-apache-clusterip
  namespace: servicos
spec:
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
