Servicos/service-pod-web-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-pod-web-v2
  namespace: servicos
spec:
  selector:
    app: pod-web-v2
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
