Servicos/service-pod-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-pod-web
  namespace: servicos
spec:
  selector:
    app: pod-web
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
