Servicos/ingress-pod-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pod-web
  namespace: servicos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: podweb.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-pod-web
                port:
                  number: 8080
